test/files/run/typetags_without_scala_reflect_typetag_manifest_interop.check
newSource1:9: error: No Manifest available for App.this.T.
      manifest[T]
              ^
